<resources>
    <string name="app_name">Represent</string>
    <string name="welcome_text">Welcome to Represent!\nPlease enter your location to get started:</string>
    <string name="zip_code">ZIP code:</string>
    <string name="zip_code_hint">e.g. 94704</string>
    <string name="current_location">Use my current location:</string>
    <string name="or">OR</string>
    <string name="find_representatives">Find Representatives!</string>

    <string name="candidate_list_title">Candidates for Berkeley</string>
    <string name="candidate_name">Name</string>
    <string name="candidate_party">Party</string>
    <string name="more_info">More info</string>

    <string name="google_app_id">40078356328</string>
</resources>
