<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs160.represent.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcomeText"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        android:id="@+id/zipCodeText"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zipCodeInput"
        android:hint="@string/zip_code_hint"
        android:layout_alignBottom="@+id/zipCodeText"
        android:layout_alignEnd="@+id/welcomeText"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/orText"
        android:layout_below="@+id/zipCodeInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:id="@+id/currentLocationText"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/useCurrentLocationSwitch"
        android:layout_alignBottom="@+id/currentLocationText"
        android:layout_alignStart="@+id/zipCodeInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_representatives"
        android:id="@+id/findRepresentativesButton"
        android:onClick="loadRepresentatives"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
